route_table.tf
### Route Tables ###
resource "aws_route_table" "public-route-table" {
  vpc_id = aws_vpc.sds-final-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.IGW.id
  }
  tags = {
    "Name" = "${local.App}_publicRT"
  }
}

resource "aws_route_table" "private-route-table" {
  vpc_id = aws_vpc.sds-final-vpc.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.NGW.id
  }
  tags = {
    "Name" = "${local.App}_privateRT"
  }
}

### Route table && Subnet associations ###
resource "aws_route_table_association" "public-route-table-association" {
  subnet_id      = aws_subnet.public-subnet.id
  route_table_id = aws_route_table.public-route-table.id
}

resource "aws_route_table_association" "private-route-table-association" {
  subnet_id      = aws_subnet.private-subnet.id
  route_table_id = aws_route_table.private-route-table.id
}
